@@ -1,6 +1,6 @@
 Package: cshapes
-Version: 0.2-2
-Date: 2010-01-26
+Version: 0.2-3
+Date: 2010-02-24
 Title: CShapes Dataset and Utilities
 Author: Nils B. Weidmann <nils.weidmann@gmail.com>, Doreen Kuse
         <doreen.kuse@gmail.com>, Kristian Skrede Gleditsch
@@ -16,6 +16,6 @@ Description: Package for CShapes, a GIS dataset of country boundaries
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: cshapes
-Repository/R-Forge/Revision: 6
-Date/Publication: 2010-01-28 16:22:17
-Packaged: 2010-01-27 21:16:45 UTC; rforge
+Repository/R-Forge/Revision: 12
+Date/Publication: 2010-03-01 19:26:56
+Packaged: 2010-02-28 21:09:00 UTC; rforge
